fix: logo z vertical align

--- a/css/style.css
+++ b/css/style.css
@@ -124,7 +124,9 @@ body {
     font-weight: 700;
     font-size: 3.5rem;
     border-radius: 50%;
-    display: inline-block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 4rem;
     height: 4rem;
     text-align: center;
